update definition name

--- a/.lyrid-definition.yml
+++ b/.lyrid-definition.yml
@@ -1,12 +1,11 @@
-name: NextNative
+name: nextjs
 description: App Description
 ignoreFiles: .git .next node_modules
 modules:
-  - name: NativeTest
+  - name: template
     language: nodejs14.x
     web: nextjs
     description: Module description
     functions:
       - name: entry
-        entry: entry.js
         description: the entry point for the function
